--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@zeit/next-css": "^1.0.1",
     "css-loader": "^5.2.0",
+    "emotion": "^11.0.0",
     "file-loader": "^6.2.0",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.4",
+    "react-material-ui-carousel": "^2.2.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "url-loader": "^4.1.1"
