--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@zeit/next-css": "^1.0.1",
@@ -20,7 +21,7 @@
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.4",
     "react-material-ui-carousel": "^2.2.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.2"
   },
   "devDependencies": {
     "url-loader": "^4.1.1"
